# sqlmesh

./: pyproject.toml
sqlmesh/core/config/: connection.py
sqlmesh/core/engine_adapter/: mysql.py
test_mysql_odbc/: debug_odbc.py  pyproject.toml  requirements.txt  test_mysql_odbc.py
test_mysql_postgres_project/: config.py  external_models.yaml
test_mysql_postgres_project/models/: academy.sql
test_sqlmesh/: config.py  external_models.yaml  pyproject.toml
test_sqlmesh/models/: academy.sql  programme.sql
